# string-calculator

./: Main.hs  README  StringCalculator.cabal  StringCalculator.hs  Tests.hs
StringCalculator/: Parser.hs
